--- a/pages/beasiswa/s1.html
+++ b/pages/beasiswa/s1.html
@@ -2,26 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Tailwind Script CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../../css/main.css" />
-    <title>Beasiswa Plus</title>
+    <title>Beasiswa S1</title>
   </head>
   <body>
     <!-- HEADER -->
-    <header class="header-bg h-[453px] md:h-[853px] base-text">
+    <header class="header-bg h-[408px] base-text">
       <div class="absolute w-full">
         <nav class="bg-transparent border-gray-200">
           <div
             class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto px-4"
           >
-            <a href="./index.html" class="flex items-center">
+            <a href="../beranda/index.html" class="flex items-center">
               <img
                 src="../../assets/logo.png"
                 alt="logo"
@@ -56,14 +54,14 @@
               >
                 <li>
                   <a
-                    href="./index.html"
+                    href="../beranda/index.html"
                     class="text-[15px] font-semibold text-[#B7B7B7] block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0"
                     >BERANDA</a
                   >
                 </li>
                 <li>
                   <a
-                    href="../tentang/index.html"
+                    href="#"
                     class="text-[15px] font-semibold text-[#B7B7B7] block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0"
                     >TENTANG</a
                   >
@@ -110,9 +108,9 @@
                     >
                       <li>
                         <a
-                          href="../beasiswa/s1.html"
+                          href="#"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >BEASISWA S1</a
+                          >Dashboard</a
                         >
                       </li>
                       <li>
@@ -357,270 +355,169 @@
           <h1
             class="font-semibold text-[24px] md:text-[40px] md:leading-[84px] tracking-wider max-w-[848px]"
           >
-            SELAMAT DATANG DI BEASISWAPLUS
+            Beasiswa
           </h1>
-          <p
-            class="max-w-[777px] text-[14px] md:text-[25px] md:leading-[35px] p-4 md:p-0"
-          >
-            Selamat datang di BeasiswaPlus,penyedia informasi beasiswa serta
-            komunitas pencari beasiswa dalam mewadahi pelajar Indonesia untuk
-            mempersiapkan studi lanjut di dalam negeri. BeasiswaPlus membantumu
-            untuk menemukan beasiswa yang kamu inginkan.
-          </p>
+          <div class="flex gap-2 text-[18px]">
+            <p>Beranda</p>
+            <div>/</div>
+            <p>Beasiswa</p>
+            <div>/</div>
+            <p class="text-[#FEB900] font-semibold">Beasiswa S1</p>
+          </div>
         </div>
       </div>
     </header>
 
-
-    <!-- BEASISWA -->
     <div class="max-w-[1280px] mx-auto">
-      <div>
-        <h1 class="content-title text-center my-8 font-semibold">Beasiswa</h1>
+      <h1 class="text-[48px] text-[#394867] text-center my-12 font-bold">
+        BEASISWA S1
+      </h1>
 
-        <!-- LIST CARD BEASISWA -->
-        <div class="px-12 py-4 grid grid-cols-1 lg:grid-cols-2 gap-x-2 gap-y-6">
-          <!-- CARD -->
-
+      <!-- BEASISWA -->
+      <div class="max-w-[1280px] mx-auto mb-32">
+        <div>
+          <!-- LIST CARD BEASISWA -->
           <div
-            class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
+            class="px-12 py-4 grid grid-cols-1 lg:grid-cols-2 gap-x-2 gap-y-6"
           >
-            <figure>
-              <img src="./assets/card-image-1.png" alt="card-img-1" />
-            </figure>
+            <!-- CARD -->
 
-            <div class="px-6 py-6">
-              <h2 class="card-title font-semibold mb-4">Beasiswa Astra</h2>
-              <p class="card-content lg:max-w-[300px]">
-                Program beasiswa ini disediakan oleh Astra International untuk
-                mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
-              </p>
-              <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
-            </div>
-          </div>
+            <div
+              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
+            >
+              <figure>
+                <img
+                  src="./assets/image-1.png"
+                  alt="card-img-1"
+                  class="object-cover"
+                />
+              </figure>
 
-          <div
-            class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-          >
-            <figure>
-              <img src="./assets/card-image-1.png" alt="card-img-1" />
-            </figure>
-
-            <div class="px-6 pt-6">
-              <h2 class="card-title font-semibold mb-4">Beasiswa Astra</h2>
-              <p class="card-content lg:max-w-[300px]">
-                Program beasiswa ini disediakan oleh Astra International untuk
-                mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
-              </p>
-              <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
-            </div>
-          </div>
-
-          <div
-            class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-          >
-            <figure>
-              <img src="./assets/card-image-1.png" alt="card-img-1" />
-            </figure>
-
-            <div class="px-6 pt-6">
-              <h2 class="card-title font-semibold mb-4">Beasiswa Astra</h2>
-              <p class="card-content lg:max-w-[300px]">
-                Program beasiswa ini disediakan oleh Astra International untuk
-                mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
-              </p>
-              <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
-            </div>
-          </div>
-
-          <div
-            class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-          >
-            <figure>
-              <img src="./assets/card-image-1.png" alt="card-img-1" />
-            </figure>
-
-            <div class="px-6 pt-6">
-              <h2 class="card-title font-semibold mb-4">Beasiswa Astra</h2>
-              <p class="card-content lg:max-w-[300px]">
-                Program beasiswa ini disediakan oleh Astra International untuk
-                mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
-              </p>
-              <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
-            </div>
-          </div>
-        </div>
-
-        <!-- BULLET PAGINATION -->
-        <div class="flex items-center justify-center gap-2 p-8">
-          <div class="rounded-full bg-gray-300 w-4 h-4"></div>
-          <div class="rounded-full bg-gray-300 w-4 h-4"></div>
-          <div class="rounded-full bg-gray-300 w-4 h-4"></div>
-          <div class="rounded-full bg-gray-300 w-4 h-4"></div>
-        </div>
-      </div>
-    </div>
-
-    <!-- MANFAAT -->
-    <div class="bg-[#FBF9F9] w-full mt-8">
-      <div class="max-w-[1290px] mx-auto">
-        <div class="flex items-start md:px-24 md:py-20">
-          <img
-            src="../../assets/manfaat-image.png"
-            alt="manfaat-img"
-            class="hidden lg:block"
-          />
-          <div class="flex flex-col px-10 py-4">
-            <div class="flex flex-col gap-1">
-              <h1
-                class="text-[47px] font-semibold text-[#6D6D6F] leading-[64px] max-w-[632px] tracking-widest"
-              >
-                Manfaat Gabung Beasiswa Plus
-              </h1>
-              <div class="bg-[#394867] w-[100px] rounded h-1"></div>
-            </div>
-            <div class="flex flex-col gap-4 mt-12">
-              <div class="flex gap-2 item-center justify-start">
-                <div
-                  class="w-[24px] h-[24px] bg-[#FEB900] p-2 text-white text-center flex items-center"
-                >
-                  1
-                </div>
-                <p
-                  class="text-[19px] leading-[27px] tracking-wider text-[#4D4D65]"
-                >
-                  Para calon penerima beasiswa dapat dengan mudah menemukan
-                  informasi terkini tentang beasiswa yang tersedia di berbagai
-                  institusi pendidikan perusahaan, dan organisasi.
+              <div class="px-6 py-6">
+                <h2 class="card-title font-semibold mb-4">
+                  Beasiswa Yayasan Karya Salemba Empat
+                </h2>
+                <p class="card-content lg:max-w-[300px]">
+                  Program beasiswa ini disediakan oleh Yayasan Karya Salemba
+                  Empat untuk mahasiswa S1 yang berprestasi di bidang teknik dan
+                  sains.
                 </p>
-              </div>
-              <div class="flex gap-2 item-center justify-start">
-                <div
-                  class="w-[24px] h-[24px] bg-[#FEB900] p-2 text-white text-center flex items-center"
-                >
-                  2
-                </div>
-                <p
-                  class="text-[19px] leading-[27px] tracking-wider text-[#4D4D65]"
-                >
-                  Informasi beasiswa yang disediakan secara online dapat diakses
-                  oleh siapa saja, di mana saja, dan kapan saja.
-                </p>
-              </div>
-              <div class="flex gap-2 item-center justify-start">
-                <div
-                  class="w-[24px] h-[24px] bg-[#FEB900] p-2 text-white text-center flex items-center"
-                >
-                  3
-                </div>
-                <p
-                  class="text-[19px] leading-[27px] tracking-wider text-[#4D4D65]"
-                >
-                  Memberikan kesempatan bagi para calon penerima beasiswa untuk
-                  terhubung dengan komunitas yang sama.
-                </p>
-              </div>
-              <div class="flex gap-2 item-center justify-start">
-                <div
-                  class="w-[24px] h-[24px] bg-[#FEB900] p-2 text-white text-center flex items-center"
-                >
-                  4
-                </div>
-                <p
-                  class="text-[19px] leading-[27px] tracking-wider text-[#4D4D65]"
-                >
-                  para calon penerima beasiswa dapat menghemat waktu dan upaya
-                  dalam mencari beasiswa yang cocok dan mempersiapkan aplikasi
-                  mereka.
-                </p>
+                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <!-- Artikel -->
-    <div class="max-w-[1290px] mx-auto my-12">
-      <div class="flex gap-2 min-[450px]:gap-8 justify-center items-center">
-        <div class="bg-[#394867] w-[50px] md:w-[100px] rounded h-1"></div>
-        <h1
-          class="font-semibold text-[18px] min-[450px]:text-[25px] text-center uppercase tracking-wider"
-        >
-          Artikel Terbaru
-        </h1>
-        <div class="bg-[#394867] w-[50px] md:w-[100px] rounded h-1"></div>
-      </div>
+            <div
+              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
+            >
+              <figure>
+                <img
+                  src="./assets/image-2.png"
+                  alt="card-img-2"
+                  class="object-cover"
+                />
+              </figure>
 
-      <div
-        class="flex flex-col flex-wrap gap-6 sm:flex-row items-center justify-center mt-8 p-4 md:p-0"
-      >
-        <div class="flex flex-col gap-2 sm:max-w-[343px]">
-          <div class="relative">
-            <img src="./assets/artikel-1.png" alt="artikel-1" class="w-full" />
-            <div class="absolute bottom-0 right-0 bg-[#FBC355] text-white p-2">
-              <span class="text-[17px] font-semibold">2 Agustus</span>
+              <div class="px-6 pt-6">
+                <h2 class="card-title font-semibold mb-4">
+                  Beasiswa Djarum Plus
+                </h2>
+                <p class="card-content lg:max-w-[300px]">
+                  Beasiswa ini diberikan oleh Djarum Foundation bagi mahasiswa
+                  D4 dan S1 yang sedang menempuh pendidikan.
+                </p>
+                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+              </div>
             </div>
-          </div>
-          <h3 class="text-[20px] font-semibold leading-[35px]">
-            Cara Mudah Diterima Beasiswa Tingkat S1
-          </h3>
 
-          <div class="flex items-center gap-6">
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-user.png" alt="icon-user" />
-              <p class="text-[#7E7E7E] text-[15px]">Hani Nurisa</p>
-            </div>
-            <p class="text-[#7E7E7E] text-[15px]">/</p>
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-follder.png" alt="icon-folder" />
-              <p class="text-[#7E7E7E] text-[15px]">Tips</p>
-            </div>
-          </div>
-        </div>
+            <div
+              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
+            >
+              <figure>
+                <img
+                  src="./assets/image-3.png"
+                  alt="image-3"
+                  class="object-cover"
+                />
+              </figure>
 
-        <div class="flex flex-col gap-2 sm:max-w-[343px]">
-          <div class="relative">
-            <img src="./assets/artikel-1.png" alt="artikel-1" class="w-full" />
-            <div class="absolute bottom-0 right-0 bg-[#FBC355] text-white p-2">
-              <span class="text-[17px] font-semibold">2 Agustus</span>
+              <div class="px-6 pt-6">
+                <h2 class="card-title font-semibold mb-4">
+                  Beasiswa Telkom University
+                </h2>
+                <p class="card-content lg:max-w-[300px]">
+                  Program beasiswa ini disediakan oleh Telkom University untuk
+                  mahasiswa jenjang S1 dan D3.
+                </p>
+                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+              </div>
             </div>
-          </div>
-          <h3 class="text-[20px] font-semibold leading-[35px]">
-            Cara Mudah Diterima Beasiswa Tingkat S1
-          </h3>
 
-          <div class="flex items-center gap-6">
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-user.png" alt="icon-user" />
-              <p class="text-[#7E7E7E] text-[15px]">Hani Nurisa</p>
-            </div>
-            <p class="text-[#7E7E7E] text-[15px]">/</p>
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-follder.png" alt="icon-folder" />
-              <p class="text-[#7E7E7E] text-[15px]">Tips</p>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-col gap-2 sm:max-w-[343px]">
-          <div class="relative">
-            <img src="./assets/artikel-1.png" alt="artikel-1" class="w-full" />
-            <div class="absolute bottom-0 right-0 bg-[#FBC355] text-white p-2">
-              <span class="text-[17px] font-semibold">2 Agustus</span>
-            </div>
-          </div>
-          <h3 class="text-[20px] font-semibold leading-[35px]">
-            Cara Mudah Diterima Beasiswa Tingkat S1
-          </h3>
+            <div
+              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
+            >
+              <figure>
+                <img
+                  src="./assets/image-4.png"
+                  alt="card-img-4"
+                  class="object-cover"
+                />
+              </figure>
 
-          <div class="flex items-center gap-6">
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-user.png" alt="icon-user" />
-              <p class="text-[#7E7E7E] text-[15px]">Hani Nurisa</p>
+              <div class="px-6 pt-6">
+                <h2 class="card-title font-semibold mb-4">
+                  Beasiswa Tokopedia
+                </h2>
+                <p class="card-content lg:max-w-[300px]">
+                  Tokopedia Scholarship, memberikan beasiswa kepada mahasiswa
+                  tahun ketiga jenjang S1 jurusan teknik lebih dari 20
+                  universitas negeri dan swasta di Indonesia.
+                </p>
+                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+              </div>
             </div>
-            <p class="text-[#7E7E7E] text-[15px]">/</p>
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-follder.png" alt="icon-folder" />
-              <p class="text-[#7E7E7E] text-[15px]">Tips</p>
+            <div
+              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
+            >
+              <figure>
+                <img
+                  src="./assets/image-5.png"
+                  alt="card-img-5"
+                  class="object-cover"
+                />
+              </figure>
+
+              <div class="px-6 pt-6">
+                <h2 class="card-title font-semibold mb-4">
+                  Beasiswa Pendidikan Indonesia
+                </h2>
+                <p class="card-content lg:max-w-[300px]">
+                  BPI Kemendikbud Ristek diadakan bagi calon mahasiswa jenjang
+                  S1, S2, dan S3, pendidikan profesi, pendidikan nongelar,
+                  pelajar berprestasi, guru, dosen.
+                </p>
+                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+              </div>
+            </div>
+            <div
+              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
+            >
+              <figure>
+                <img
+                  src="./assets/image-6.png"
+                  alt="card-img-6"
+                  class="object-cover"
+                />
+              </figure>
+
+              <div class="px-6 pt-6">
+                <h2 class="card-title font-semibold mb-4">Beasiswa Glints</h2>
+                <p class="card-content lg:max-w-[300px]">
+                  Program beasiswa ini disediakan oleh Yayasan Karya Salemba
+                  Empat untuk mahasiswa S1 yang berprestasi di bidang teknik dan
+                  sains.
+                </p>
+                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+              </div>
             </div>
           </div>
         </div>
