--- a/pages/kirim_tulisan/inddex.html
+++ b/pages/kirim_tulisan/inddex.html
@@ -61,14 +61,14 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../tentang/index.html"
                     class="text-[15px] font-semibold text-[#B7B7B7] block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0"
                     >TENTANG</a
                   >
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../artikel/index.html"
                     class="text-[15px] font-semibold text-[#B7B7B7] block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0"
                     >ARTIKEL</a
                   >
@@ -139,14 +139,14 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../forum/index.html"
                     class="text-[15px] font-semibold text-[#B7B7B7] block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0"
                     >FORUM</a
                   >
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="./inddex.html"
                     class="text-[15px] font-semibold text-[#B7B7B7] block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0"
                     >KIRIM TULISAN</a
                   >
@@ -367,8 +367,10 @@
     </header>
 
     <!-- FORM TULISAN -->
-    <div class="max-w-[1280px] mx-auto">
-      <div class="border-2 border-[#696969] max-w-[1124px] mx-auto mt-8 mb-14 rounded-lg">
+    <div class="max-w-[1280px] mx-auto p-4 lg:p-0">
+      <div
+        class="border-2 border-[#696969] max-w-[1124px] mx-auto mt-8 mb-14 rounded-lg"
+      >
         <div
           class="text-white bg-[#394867] font-bold tracking-wider text-[30px] pl-8 py-2 rounded-t-md"
         >
@@ -495,5 +497,6 @@
         </div>
       </di>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
   </body>
 </html>
