--- a/pages/tentang/index.html
+++ b/pages/tentang/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Tailwind Script CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -11,17 +10,17 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../../css/main.css" />
-    <title>Beasiswa Plus</title>
+    <title>Tentang</title>
   </head>
   <body>
     <!-- HEADER -->
-    <header class="header-bg h-[453px] md:h-[853px] base-text">
+    <header class="header-bg h-[408px] base-text">
       <div class="absolute w-full">
         <nav class="bg-transparent border-gray-200">
           <div
             class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto px-4"
           >
-            <a href="./index.html" class="flex items-center">
+            <a href="../beranda/index.html" class="flex items-center">
               <img
                 src="../../assets/logo.png"
                 alt="logo"
@@ -56,14 +55,14 @@
               >
                 <li>
                   <a
-                    href="./index.html"
+                    href="../beranda/index.html"
                     class="text-[15px] font-semibold text-[#B7B7B7] block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0"
                     >BERANDA</a
                   >
                 </li>
                 <li>
                   <a
-                    href="../tentang/index.html"
+                    href="#"
                     class="text-[15px] font-semibold text-[#B7B7B7] block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0"
                     >TENTANG</a
                   >
@@ -112,7 +111,8 @@
                         <a
                           href="../beasiswa/s1.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >BEASISWA S1</a
+                        >
+                          BEASISWA S1</a
                         >
                       </li>
                       <li>
@@ -357,272 +357,38 @@
           <h1
             class="font-semibold text-[24px] md:text-[40px] md:leading-[84px] tracking-wider max-w-[848px]"
           >
-            SELAMAT DATANG DI BEASISWAPLUS
+            Tentang
           </h1>
-          <p
-            class="max-w-[777px] text-[14px] md:text-[25px] md:leading-[35px] p-4 md:p-0"
-          >
-            Selamat datang di BeasiswaPlus,penyedia informasi beasiswa serta
-            komunitas pencari beasiswa dalam mewadahi pelajar Indonesia untuk
-            mempersiapkan studi lanjut di dalam negeri. BeasiswaPlus membantumu
-            untuk menemukan beasiswa yang kamu inginkan.
-          </p>
+          <div class="flex gap-2 text-[18px]">
+            <p>Beranda</p>
+            <div>/</div>
+            <p class="text-[#FEB900] font-semibold">Tentang</p>
+          </div>
         </div>
       </div>
     </header>
 
-
-    <!-- BEASISWA -->
-    <div class="max-w-[1280px] mx-auto">
-      <div>
-        <h1 class="content-title text-center my-8 font-semibold">Beasiswa</h1>
-
-        <!-- LIST CARD BEASISWA -->
-        <div class="px-12 py-4 grid grid-cols-1 lg:grid-cols-2 gap-x-2 gap-y-6">
-          <!-- CARD -->
-
-          <div
-            class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-          >
-            <figure>
-              <img src="./assets/card-image-1.png" alt="card-img-1" />
-            </figure>
-
-            <div class="px-6 py-6">
-              <h2 class="card-title font-semibold mb-4">Beasiswa Astra</h2>
-              <p class="card-content lg:max-w-[300px]">
-                Program beasiswa ini disediakan oleh Astra International untuk
-                mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
-              </p>
-              <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
-            </div>
-          </div>
-
-          <div
-            class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-          >
-            <figure>
-              <img src="./assets/card-image-1.png" alt="card-img-1" />
-            </figure>
-
-            <div class="px-6 pt-6">
-              <h2 class="card-title font-semibold mb-4">Beasiswa Astra</h2>
-              <p class="card-content lg:max-w-[300px]">
-                Program beasiswa ini disediakan oleh Astra International untuk
-                mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
-              </p>
-              <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
-            </div>
-          </div>
-
-          <div
-            class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-          >
-            <figure>
-              <img src="./assets/card-image-1.png" alt="card-img-1" />
-            </figure>
-
-            <div class="px-6 pt-6">
-              <h2 class="card-title font-semibold mb-4">Beasiswa Astra</h2>
-              <p class="card-content lg:max-w-[300px]">
-                Program beasiswa ini disediakan oleh Astra International untuk
-                mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
-              </p>
-              <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
-            </div>
-          </div>
-
-          <div
-            class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-          >
-            <figure>
-              <img src="./assets/card-image-1.png" alt="card-img-1" />
-            </figure>
-
-            <div class="px-6 pt-6">
-              <h2 class="card-title font-semibold mb-4">Beasiswa Astra</h2>
-              <p class="card-content lg:max-w-[300px]">
-                Program beasiswa ini disediakan oleh Astra International untuk
-                mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
-              </p>
-              <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
-            </div>
-          </div>
-        </div>
-
-        <!-- BULLET PAGINATION -->
-        <div class="flex items-center justify-center gap-2 p-8">
-          <div class="rounded-full bg-gray-300 w-4 h-4"></div>
-          <div class="rounded-full bg-gray-300 w-4 h-4"></div>
-          <div class="rounded-full bg-gray-300 w-4 h-4"></div>
-          <div class="rounded-full bg-gray-300 w-4 h-4"></div>
-        </div>
+    <div class="max-w-[1280px] mx-auto p-8 lg:p-4 mb-32">
+      <div class="mt-12">
+        <h1 class="font-bold text-[48px] text-[#394867]">TENTANG</h1>
+        <h1 class="font-bold text-[48px] text-[#394867]">BEASISWA PLUS</h1>
       </div>
-    </div>
-
-    <!-- MANFAAT -->
-    <div class="bg-[#FBF9F9] w-full mt-8">
-      <div class="max-w-[1290px] mx-auto">
-        <div class="flex items-start md:px-24 md:py-20">
+      <div class="relative w-full mt-32 mx-auto">
+        <div class="bg-[#F5F6F7] p-8 w-[518px]">
+          <p class="max-w-[403px] text-[#434343] text-[20px]">
+            Sebuah ruang virtual yang memberi kemudahan bagi para calon pelamar
+            beasiswa, pelamar, penerima beasiswa sebelumnya, dan pakar dalam
+            bidang pendidikan agar melakukan interaksi untuk berbagi informasi,
+            pengalaman, serta perspektif terkait kriteria seleksi beasiswa,
+            peluang beasiiswa, hingga tips dan saran seputar pengajuan beasiswa.
+          </p>
+        </div>
+        <div class="absolute top-[-9rem] right-0 lg:right-[10rem]">
           <img
-            src="../../assets/manfaat-image.png"
-            alt="manfaat-img"
-            class="hidden lg:block"
+            src="./assets/tentang.png"
+            class="w-[420px] hidden md:block min-[1280px]:w-full"
+            alt="tentang"
           />
-          <div class="flex flex-col px-10 py-4">
-            <div class="flex flex-col gap-1">
-              <h1
-                class="text-[47px] font-semibold text-[#6D6D6F] leading-[64px] max-w-[632px] tracking-widest"
-              >
-                Manfaat Gabung Beasiswa Plus
-              </h1>
-              <div class="bg-[#394867] w-[100px] rounded h-1"></div>
-            </div>
-            <div class="flex flex-col gap-4 mt-12">
-              <div class="flex gap-2 item-center justify-start">
-                <div
-                  class="w-[24px] h-[24px] bg-[#FEB900] p-2 text-white text-center flex items-center"
-                >
-                  1
-                </div>
-                <p
-                  class="text-[19px] leading-[27px] tracking-wider text-[#4D4D65]"
-                >
-                  Para calon penerima beasiswa dapat dengan mudah menemukan
-                  informasi terkini tentang beasiswa yang tersedia di berbagai
-                  institusi pendidikan perusahaan, dan organisasi.
-                </p>
-              </div>
-              <div class="flex gap-2 item-center justify-start">
-                <div
-                  class="w-[24px] h-[24px] bg-[#FEB900] p-2 text-white text-center flex items-center"
-                >
-                  2
-                </div>
-                <p
-                  class="text-[19px] leading-[27px] tracking-wider text-[#4D4D65]"
-                >
-                  Informasi beasiswa yang disediakan secara online dapat diakses
-                  oleh siapa saja, di mana saja, dan kapan saja.
-                </p>
-              </div>
-              <div class="flex gap-2 item-center justify-start">
-                <div
-                  class="w-[24px] h-[24px] bg-[#FEB900] p-2 text-white text-center flex items-center"
-                >
-                  3
-                </div>
-                <p
-                  class="text-[19px] leading-[27px] tracking-wider text-[#4D4D65]"
-                >
-                  Memberikan kesempatan bagi para calon penerima beasiswa untuk
-                  terhubung dengan komunitas yang sama.
-                </p>
-              </div>
-              <div class="flex gap-2 item-center justify-start">
-                <div
-                  class="w-[24px] h-[24px] bg-[#FEB900] p-2 text-white text-center flex items-center"
-                >
-                  4
-                </div>
-                <p
-                  class="text-[19px] leading-[27px] tracking-wider text-[#4D4D65]"
-                >
-                  para calon penerima beasiswa dapat menghemat waktu dan upaya
-                  dalam mencari beasiswa yang cocok dan mempersiapkan aplikasi
-                  mereka.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Artikel -->
-    <div class="max-w-[1290px] mx-auto my-12">
-      <div class="flex gap-2 min-[450px]:gap-8 justify-center items-center">
-        <div class="bg-[#394867] w-[50px] md:w-[100px] rounded h-1"></div>
-        <h1
-          class="font-semibold text-[18px] min-[450px]:text-[25px] text-center uppercase tracking-wider"
-        >
-          Artikel Terbaru
-        </h1>
-        <div class="bg-[#394867] w-[50px] md:w-[100px] rounded h-1"></div>
-      </div>
-
-      <div
-        class="flex flex-col flex-wrap gap-6 sm:flex-row items-center justify-center mt-8 p-4 md:p-0"
-      >
-        <div class="flex flex-col gap-2 sm:max-w-[343px]">
-          <div class="relative">
-            <img src="./assets/artikel-1.png" alt="artikel-1" class="w-full" />
-            <div class="absolute bottom-0 right-0 bg-[#FBC355] text-white p-2">
-              <span class="text-[17px] font-semibold">2 Agustus</span>
-            </div>
-          </div>
-          <h3 class="text-[20px] font-semibold leading-[35px]">
-            Cara Mudah Diterima Beasiswa Tingkat S1
-          </h3>
-
-          <div class="flex items-center gap-6">
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-user.png" alt="icon-user" />
-              <p class="text-[#7E7E7E] text-[15px]">Hani Nurisa</p>
-            </div>
-            <p class="text-[#7E7E7E] text-[15px]">/</p>
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-follder.png" alt="icon-folder" />
-              <p class="text-[#7E7E7E] text-[15px]">Tips</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="flex flex-col gap-2 sm:max-w-[343px]">
-          <div class="relative">
-            <img src="./assets/artikel-1.png" alt="artikel-1" class="w-full" />
-            <div class="absolute bottom-0 right-0 bg-[#FBC355] text-white p-2">
-              <span class="text-[17px] font-semibold">2 Agustus</span>
-            </div>
-          </div>
-          <h3 class="text-[20px] font-semibold leading-[35px]">
-            Cara Mudah Diterima Beasiswa Tingkat S1
-          </h3>
-
-          <div class="flex items-center gap-6">
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-user.png" alt="icon-user" />
-              <p class="text-[#7E7E7E] text-[15px]">Hani Nurisa</p>
-            </div>
-            <p class="text-[#7E7E7E] text-[15px]">/</p>
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-follder.png" alt="icon-folder" />
-              <p class="text-[#7E7E7E] text-[15px]">Tips</p>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-col gap-2 sm:max-w-[343px]">
-          <div class="relative">
-            <img src="./assets/artikel-1.png" alt="artikel-1" class="w-full" />
-            <div class="absolute bottom-0 right-0 bg-[#FBC355] text-white p-2">
-              <span class="text-[17px] font-semibold">2 Agustus</span>
-            </div>
-          </div>
-          <h3 class="text-[20px] font-semibold leading-[35px]">
-            Cara Mudah Diterima Beasiswa Tingkat S1
-          </h3>
-
-          <div class="flex items-center gap-6">
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-user.png" alt="icon-user" />
-              <p class="text-[#7E7E7E] text-[15px]">Hani Nurisa</p>
-            </div>
-            <p class="text-[#7E7E7E] text-[15px]">/</p>
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-follder.png" alt="icon-folder" />
-              <p class="text-[#7E7E7E] text-[15px]">Tips</p>
-            </div>
-          </div>
         </div>
       </div>
     </div>
